# nanoclaw-sidecar

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
tests/: test_main.py
