[project]
name = "nanoclaw-sidecar"
version = "1.0.0"
description = "HTTP bridge between ai-orchestrator-mcp and nanoclaw IPC filesystem"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
